# service-utils

./: .gitignore  BUILD  Makefile  README.md  docker-compose.yaml  pyproject.toml
dabah/service/utils/: config.py  database.py  errors.py  grpc.py  logs.py
docker/: BUILD  dev.Dockerfile
service-util/: _version.py  logs.py
sobremesa/service/utils/: config.py  grpc.py
src/: _version.py  config.py  logs.py
src/dabah/service/utils/: config.py
tests/: test_config.py
tests/integration/: test_database.py
tests/unit/: test_config.py  test_grpc.py
