[project]
name = "dabah.service.utils"
description = "Common setup, configuration logic for Python services"
authors = [
    { name = "Ivan Perdomo", email = "iperdomo2016@gmail.com" }
]
dependencies = [
    "python-dotenv>=1.0.1",
    "psycopg>=3.2.1",
]
dynamic = ["version"]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["dabah"]

[tool.pytest.ini_options]
log_cli = 1
log_cli_level = "DEBUG"

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.hatch.version]
path = ".project-version"
pattern = "(?P<version>[^']+)"
