[project]
name = "sobremesa.service.utils"
description = "Common setup, configuration logic for Python services"
version = "0.1.0"
authors = [
    { name = "Ivan Perdomo", email = "iperdomo2016@gmail.com" }
]
dependencies = [
    "python-dotenv>=1.0.1",
    "psycopg>=3.2.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.optional-dependencies]
dev = [ "pytest" ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sobremesa"]

[tool.pytest.ini_options]
log_cli = 1
log_cli_level = "DEBUG"

[tool.ruff.lint]
extend-select = ["I", "UP"]

